integrates openweather api to display current temp in London; also allows user to select their city but we cannot display temp on this basis currently

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -9,3 +9,11 @@
 .medium-usage {
   color: black;
 }
+
+section {
+  font-family: "Comic Sans MS";
+}
+
+#temperature {
+  font-family: "Georgia";
+}
